接口转发和工单优化处理